[package]
name = "pump"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pump"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
# Only pull in Raydium adapter CPI; do not enable our local `cpi` feature.
raydium_cpi = ["dep:raydium_adapter", "raydium_adapter/cpi"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version="0.30.1", features = ["init-if-needed"] }
anchor-spl = { version="0.30.1", features = ["metadata"] }
raydium_adapter = { path = "../../raydium_adapter", optional = true }
